--- a/Assignment-1-main/styles.css
+++ b/Assignment-1-main/styles.css
@@ -6,8 +6,11 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   /* background: rgb(234, 234, 161); */
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .navItems {
@@ -171,5 +174,7 @@ p {
 
 .myImage {
   /* margin-top: 1px; */
-  margin-left: 25px;
+  width: 30px;
+  height: auto;
+  margin-left: 10px; /* Adjust margin for spacing */
 }
